--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ steps:
   parameters:
     buildConfiguration: 'Debug'
 
-- template: templates/build.yml
+- template: templates/Build.yml
   parameters:
     buildConfiguration: 'Release'
 
